fix: carousel images on mobile

--- a/app/themes/hunger-tv/assets/styles/components/carousel.scss
+++ b/app/themes/hunger-tv/assets/styles/components/carousel.scss
@@ -65,6 +65,11 @@
 	// .carousel__control--prev {
 	// display: none !important;
 	// }
+
+	.carousel .image {
+		width: auto !important;
+		height: auto !important;
+	}
 }
 
 @media (min-width: $lg-min) {
